# pillager

./: .buildinfo  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  genindex.html  index.html  objects.inv  pillager.html  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: run-tests.yml  test-coverage.yml
_autosummary/: pillager.html  pillager.pillager.Pillager.html  pillager.pillager.html
_sources/: index.rst.txt  pillager.rst.txt
_sources/_autosummary/: pillager.pillager.Pillager.rst.txt  pillager.pillager.rst.txt  pillager.rst.txt
docs/source/: conf.py  index.rst
docs/source/_templates/: custom-class-template.rst  custom-module-template.rst
src/pillager/: pillager.py
tests/: test_pillager.py
tests/util_data/: control.i  serpent.i_det0.m  serpent.i_res.m  serpent_base.i  serpent_control.i
