[build-system]
requires = [
    "hatchling>=1.13.0",
    "hatch-vcs>=0.3.0",
]
build-backend = "hatchling.build"

[project]
name = "pillager"
dynamic = ["version"]
description = "Example package for demonstration"
readme = "README.md"
license = { text = "BSD-3-Clause" }  # SPDX short identifier
authors = [
  { name = "Quinton J. Williams", email = "qscorp97@gmail.com" },
]
requires-python = ">=3.9"

dependencies = [
    "numpy>=2.2.1",  
    "pandas"
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"
# Need to give root as we aren't at the same level as the git repo
root = "."

[tool.hatch.build.hooks.vcs]
version-file = "src/pillager/_version.py"
